# Algorithm

./: .gitignore  CMakeLists.txt  tags
pa1/: CMakeLists.txt  Makefile  Sort.heap  Sort.quick  heapSort  insertionSort  main.out  mergeSort  output  output_heap  output_quick  outputm  quickSort  readme.txt  report.docx  run.sh  test  test.cpp
pa1/include/: database.h  insertionSort.h  key_compare.h  parser.h  word.h
pa1/plot/: mem.py  test.py  time.py
pa1/src/: '  .database.h.swp  .insertionSort.cpp.swp  .insertionSort.h.swp  .insertionSortMain.cpp.swp  .parser.cpp.swp  .parser.h.swp  Makefile.in  database.cpp  database.h  insertionSort.cpp  insertionSort.h  insertionSortMain.cpp  key_compare.h  word.h
pa1/src/main/: heapMain.cpp  insertionMain.cpp  mergeMain.cpp  quickMain.cpp
pa1/src/sorter/: heapSort.cpp  heapSort.h  insertionSort.cpp  insertionSort.h  mergeSort.cpp  mergeSort.h  quickSort.cpp  quickSort.h
pa1/src/util/: database.cpp  database.h  make.util  word.cpp
pa2/: .gitignore  CMakeLists.txt  mps  readme.txt  report.docx  run.sh
pa2/src/: chordTable.cpp  chordTable.hpp  chordVec.cpp  chordVec.hpp  dp.hpp  global.hpp  io.hpp  main.cpp  table.cpp  table.hpp
pa2/src/dp/: dp.cpp  dp.hpp  dpGlobal.hpp
pa2/src/io/: .io.cpp.swp  .io.hpp.swp  io.cpp  io.hpp  ioGlobal.hpp
pa2/src/main/: .main.cpp.swp  main.cpp  mainGlobal.hpp
pa2/src/misc/: global.hpp
pa2/src/util/: .chordSet.hpp.swp  .table.cpp.swp  .table.hpp.swp  chordSet.cpp  chordSet.hpp  chordTable.hpp  chordVec.cpp  chordVec.hpp  table.cpp  table.hpp  utilGlobal.hpp
pa3/: .gitignore  CMakeLists.txt  readme.txt  report.docx  router  run.sh  verify.sh
pa3/output/: gr10x10.in.out  gr20x20.in.out  gr4x4.in.out  gr5x5.in.out  gr60x60.in.out
pa3/src/database/: database.cpp  database.h  net.cpp  net.h
pa3/src/main/: main.cpp
pa3/src/misc/: global.h
pa3/src/util/: aStar.h  astar.cpp  graph.cpp  graph.h  point.h  rect.h
pa3/tool/verify/: err.out
test/: .gitignore  CMakeLists.txt  Sort.insertion  Sort.merge  outpu  output  output3
test/src/: Makefile.in
test/src/main/: heapMain.cpp  insertionMain.cpp  mergeMain.cpp  quickMain.cpp
test/src/sorter/: heapSort.cpp  insertionSort.cpp  make.sorter  mergeSort.cpp  mergeSort.h  quickSort.h
test/src/util/: database.cpp  database.h  make.util
